# bevy4ipad

./: Cargo.toml  Info.plist
.github/workflows/: build-ios.yml
src/: main.rs
